@@ -1,4 +1,3 @@
-#include <gtk/gtk.h>
-#include <gconf-client.h>
+#include <gconf/gconf-client.h>
 
 gconf_client_get_type
