@@ -2,6 +2,10 @@
 
 	* configure.in: bump version to 1.1.4, and set revision to 1
 
+	* doc/gconf/Makefile.am: fix this
+
+	* doc/gconf/gconf.types: update
+	
 2001-10-31  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconftool.c: add --recursive-unset command line option
